add ideas section to README

--- a/README.org
+++ b/README.org
@@ -25,3 +25,7 @@
 - [ ] Collect all writeable fields
 - [ ] Calculate attribute saving throws
 - [ ] ...
+
+* IDEAS
+
+- Character image as inline image
